--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,14 @@
 ---
-
+import Base from "@layouts/Base.astro";
+import Header from "@components/Header.astro";
+import Banner from "@components/Banner.astro";
+import Footer from "@components/Footer.astro";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Base
+  title="Jesus Alexander LEon COrdero | jaleco8"
+  description="👨🏻‍🎓Ing. Computación |🧑🏻‍💻 Desarrollador Senior | Full Stack | PHP JavaScript | Blockchain Web3 | 🇻🇪🌎"
+/>
+<Header />
+<Banner />
+<Footer />
